correção de bugs

--- a/src/middlewares/views/cadastro.ejs
+++ b/src/middlewares/views/cadastro.ejs
@@ -33,7 +33,7 @@
             }).then(x => {
                 console.log(x)
                 alert(x.data)
-                window.location.href = "menu"
+                window.location.href = "/"
         })
                 .catch(e => alert("Erro"));
         }
