--- a/src/middlewares/views/menu.ejs
+++ b/src/middlewares/views/menu.ejs
@@ -56,7 +56,7 @@
 
         
         <button onclick="registerCV()">Gerar Currículo</button>
-        <button onclick="verCVS()">Vizualizar CVs</button>
+        <button onclick="verCVS()">Visualizar CVs</button>
     </body>
     <script>
         function registerCV() {
